# nemotesting

blakes_bot/: pyproject.toml
blakes_bot/configs/: config.yml
blakes_bot/src/blakes_bot/: blakes_bot_function.py  register.py
blakes_bot/src/blakes_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
blakes_bot/src/blakes_bot/configs/: config.yml
yc_application_bot/: pyproject.toml
yc_application_bot/configs/: config.yml
yc_application_bot/data/: jobs.json
yc_application_bot/src/yc_application_bot/: register.py  yc_application_bot_function.py
yc_application_bot/src/yc_application_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
yc_application_bot/src/yc_application_bot/configs/: config.yml
