[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../aiqtoolkit"

[project]
name = "blakes_bot"
dynamic = ["version"]
dependencies = [
  "aiqtoolkit[langchain]",
]
requires-python = ">=3.11,<3.13"
description = "Custom AIQ Toolkit Workflow"
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
aiqtoolkit = { path = "../../aiqtoolkit", editable = true }

[project.entry-points.'aiq.components']
blakes_bot = "blakes_bot.register"